# dpcpp-mcml-deprecated

./: CMakeLists.txt  arch.vsdx  wcy_lo.sha256
src/: io.cpp  main.cpp  mcml.hpp  nr.cpp  nr.hpp
src/data/: tracker.h
src/dpcpp/: main.cpp  utils.hpp
src/io/: io.hpp
src/math/: math.cpp  math.h  random.cpp
